--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -369,6 +369,17 @@
           <span class="card__title">Full Stack Developer</span>
           <span class="card__name">Gabriel Martinez</span>
           <p class="card__text">"Gracias, Ricardo, por tu comprensión y dedicación. Has sido un estudiante ejemplar, siempre mostrando disciplina y compromiso."</p>
+        <a href="https://gabrielmartinezghioma.netlify.app/" class="linkedin-swiper" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+      <div class="card swiper-slide">
+        <div class="card__image">
+          <img src="/imagesrh/gabriel.jpeg" alt="card image">
+        </div>
+        <div class="card__content">
+          <span class="card__title">Studen Employment and Hiring Partnerships</span>
+          <span class="card__name">Adlai Bermejo</span>
+          <p class="card__text">"Quisiera destacar a Ricardo Martin Hoyos como un desarrollador fullstack excepcional dentro de su generación. Su dominio de las tecnologías front-end y back-end es impresionante, y su capacidad para resolver problemas de manera creativa y eficiente lo distingue entre sus pares. Ricardo no solo demuestra un profundo entendimiento técnico, sino también una habilidad innata para colaborar en equipo y comunicar ideas de manera clara y concisa. Su dedicación al aprendizaje continuo y su pasión por la creación de soluciones innovadoras lo convierten en un activo invaluable en cualquier equipo de desarrollo."</p>
         <a href="https://gabrielmartinezghioma.netlify.app/" class="linkedin-swiper" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
