--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
       </div>
       <div class="card swiper-slide">
         <div class="card__image">
-          <img src="/imagesrh/adlai.jpeg" alt="card image">
+          <img src="/imagesrh/Adlai.jpeg" alt="card image">
         </div>
         <div class="card__content">
           <span class="card__title">Studen Employment and Hiring Partnerships</span>
