--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
           <span class="card__title">Studen Employment and Hiring Partnerships</span>
           <span class="card__name">Adlai Bermejo</span>
           <p class="card__text">"Quisiera destacar a Ricardo Martin Hoyos como un desarrollador fullstack excepcional dentro de su generación. Su dominio de las tecnologías front-end y back-end es impresionante, y su capacidad para resolver problemas de manera creativa y eficiente lo distingue entre sus pares. Ricardo no solo demuestra un profundo entendimiento técnico, sino también una habilidad innata para colaborar en equipo y comunicar ideas de manera clara y concisa. Su dedicación al aprendizaje continuo y su pasión por la creación de soluciones innovadoras lo convierten en un activo invaluable en cualquier equipo de desarrollo."</p>
-        <a href="https://gabrielmartinezghioma.netlify.app/" class="linkedin-swiper" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.linkedin.com/in/adlai-bermejo/" class="linkedin-swiper" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
       <div class="card swiper-slide">
