--- a/index.html
+++ b/index.html
@@ -365,9 +365,10 @@
         <div class="card__image">
           <img src="/imagesrh/gabriel.jpeg" alt="card image">
         </div>
+        <img class="pais__img" src="/imagesrh/argentina.png" alt="">
         <div class="card__content">
           <span class="card__title">Full Stack Developer</span>
-          <span class="card__name">Gabriel Martinez</span>
+          <span class="card__name">Gabriel Martinez </span>
           <p class="card__text">"Gracias, Ricardo, por tu comprensión y dedicación. Has sido un estudiante ejemplar, siempre mostrando disciplina y compromiso."</p>
         <a href="https://gabrielmartinezghioma.netlify.app/" class="linkedin-swiper" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
@@ -376,8 +377,9 @@
         <div class="card__image">
           <img src="/imagesrh/Adlai.jpeg" alt="card image">
         </div>
+        <img class="pais__img" src="/imagesrh/mexico.png" alt="">
         <div class="card__content">
-          <span class="card__title">Studen Employment and Hiring Partnerships</span>
+          <span class="card__title">Studen Employment</span>
           <span class="card__name">Adlai Bermejo</span>
           <p class="card__text">"Quisiera destacar a Ricardo Martin Hoyos como un desarrollador fullstack excepcional dentro de su generación. Su dominio de las tecnologías front-end y back-end es impresionante, y su capacidad para resolver problemas de manera creativa y eficiente lo distingue entre sus pares. Ricardo no solo demuestra un profundo entendimiento técnico, sino también una habilidad innata para colaborar en equipo y comunicar ideas de manera clara y concisa. Su dedicación al aprendizaje continuo y su pasión por la creación de soluciones innovadoras lo convierten en un activo invaluable en cualquier equipo de desarrollo."</p>
         <a href="https://www.linkedin.com/in/adlai-bermejo/" class="linkedin-swiper" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -387,6 +389,7 @@
         <div class="card__image">
           <img src="/imagesrh/franco.jpeg" alt="card image">
         </div>
+        <img class="pais__img" src="/imagesrh/peru.png" alt="">
         <div class="card__content">
           <span class="card__title">Ing. De Sistemas</span>
           <span class="card__name">Franco Xavier Lozano</span>
@@ -399,6 +402,7 @@
         <div class="card__image">
           <img src="/imagesrh/marjorie.jpeg" alt="card image">
         </div>
+        <img class="pais__img" src="/imagesrh/peru.png" alt="">
         <div class="card__content">
           <span class="card__title">Mg. en Gestión de servicios</span>
           <span class="card__name">Marjorie Iglesias Tolentino</span>
@@ -411,6 +415,7 @@
         <div class="card__image">
           <img src="/imagesrh/yoelis.jpeg" alt="card image">
         </div>
+        <img class="pais__img" src="/imagesrh/puerto-rico.png" alt="">
         <div class="card__content">
           <span class="card__title">Desarrollador Full Stack Jr.</span>
           <span class="card__name">Yoelis Figueredo</span>
@@ -425,7 +430,7 @@
         <div class="card__image">
           <img src="/imagesrh/faviola rodriguez.jpeg" alt="card image">
         </div>
-
+        <img class="pais__img" src="/imagesrh/mexico.png" alt="">
         <div class="card__content">
           <span class="card__title">Líder de Búsqueda | RH</span>
           <span class="card__name">Fabiola Rodriguez</span>
@@ -438,7 +443,7 @@
         <div class="card__image">
           <img src="/imagesrh/Brayan.jpg" alt="card image">
         </div>
-
+        <img class="pais__img" src="/imagesrh/colombia.png" alt="">
         <div class="card__content">
           <span class="card__title">Ingeniero de Software</span>
           <span class="card__name">Brayan Muñoz</span>
@@ -451,6 +456,7 @@
         <div class="card__image">
           <img src="/imagesrh/castillo.jpeg" alt="card image">
         </div>
+        <img class="pais__img" src="/imagesrh/mexico.png" alt="">
         <div class="card__content">
           <span class="card__title">IT Analyst</span>
           <span class="card__name">José Antonio Castillo</span>
@@ -463,7 +469,7 @@
         <div class="card__image">
           <img src="/imagesrh/manuela.jpeg" alt="card image">
         </div>
-
+        <img class="pais__img" src="/imagesrh/colombia.png" alt="">
         <div class="card__content">
           <span class="card__title">Psicóloga Organizacional</span>
           <span class="card__name">Manuela Valencia</span>
@@ -475,7 +481,7 @@
         <div class="card__image">
           <img src="/imagesrh/jonathan.jpg" alt="card image">
         </div>
-
+        <img class="pais__img" src="/imagesrh/argentina.png" alt="">
         <div class="card__content">
           <span class="card__title">FullStack Developer Python</span>
           <span class="card__name">Jonatan Di vincenzo </span>
@@ -487,7 +493,7 @@
         <div class="card__image">
           <img src="/imagesrh/abraham.jpg" alt="card image">
         </div>
-
+        <img class="pais__img" src="/imagesrh/mexico.png" alt="">
         <div class="card__content">
           <span class="card__title">Actuary - Data Analyst</span>
           <span class="card__name">Abraham Colina</span>
