--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <div class="card__image">
           <img src="/imagesrh/yoelis.jpeg" alt="card image">
         </div>
-        <img class="pais__img" src="/imagesrh/puerto-rico.png" alt="">
+        <img class="pais__img" src="/imagesrh/cuba.png" alt="">
         <div class="card__content">
           <span class="card__title">Desarrollador Full Stack Jr.</span>
           <span class="card__name">Yoelis Figueredo</span>
