--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
          <p>¡Contáctame y
           conversemos sobre mi perfil!</p>
         <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206/" class="linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/ricardohoycode" class="linkedin" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://wa.me/51925417209?text=Hola%20Ricardo%Hoyos%20Deseo%20información%20por%20favor%quiero%una%web" class="linkedin" class="linkedin" target="_blank"><i class="fab fa-whatsapp"></i></a>
 
 
@@ -152,7 +152,7 @@
 
       <h3> Creamos tu Sitio Web</h3>
 
-      <a href="https://www.ricardohoyoscode.com/" class="btn" target="_blank">Ver más</a>
+      <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206/" class="btn" target="_blank">Ver más</a>
     </form>
 
   </section>
@@ -558,7 +558,7 @@
     </div>
 
     <div class="credit"> &copy; Creado con el <i class="fas fa-heartbeat"></i> por <span><a
-          href="https://www.ricardohoyoscode.com/" target="_blank">Ricardo Hoyos</a></span> | Todos los Derechos Reservados! | Gracias a <span><a href="https://www.academlo.com/" target="_blank"> Academlo</a></span>
+          href="https://www.facebook.com/Ricardohoyoscode" target="_blank">Ricardo Hoyos</a></span> | Todos los Derechos Reservados! | Gracias a <span><a href="https://www.academlo.com/" target="_blank"> Academlo</a></span>
     </div>
 
   </section>
