logo and cv quit

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section class="flex">
 
-      <a href="#home" class="logo"><img src="/imagesrh/logorh.png" alt=""></a>
+      <a href="#home" class="logo"><img src="/imagesrh/logo-chat-sf.png" alt=""></a>
 
       <nav class="navbar">
         <a href="#home" class="activo">Inicio</a>
@@ -88,7 +88,6 @@
         efectivas soluciones, la demuestro en la ejecución de mi ejercicio profesional, en el cual siempre busco
         entregar resultados, expandiendo mis
         conocimientos de manera continua y consistente.</p>
-      <a href="/Ricardo Martin Hoyos CV - 2024 💼.pdf" class="btn-download" target="_blank"><span>Descargar CV</span></a>
     </div>
 
   </section>
