actualization text and hamburger

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <a href="#home" class="logo"><img src="/imagesrh/logo-chat-sf.png" alt=""></a>
 
-      <nav class="navbar">
+      <nav class="navbar" id="navbar">
         <a href="#home" class="activo">Inicio</a>
         <a href="#about">Sobre Mí</a>
         <a href="#facility">Servicios</a>
@@ -39,7 +39,7 @@
         <!--<button href="#" class="btn">Modo Oscuro</button>-->
       </nav>
 
-      <div id="menu-bar" class="fas fa-bars"></div>
+      <div id="menuBar" class="fas fa-bars"></div>
 
     </section>
 
@@ -82,12 +82,7 @@
 
     <div class="content">
       <h3>Bienvenidos a mi mundo <span>!</span></h3>
-      <p>Soy Desarrollador FrontEnd | FullStack, soy Peruano de nacimiento y presento mi formación profesional al
-        desarrollo de
-        páginas web, aplicaciones de escritorio y portafolios profesionales. <br> Mi pasión de brindar buenas y
-        efectivas soluciones, la demuestro en la ejecución de mi ejercicio profesional, en el cual siempre busco
-        entregar resultados, expandiendo mis
-        conocimientos de manera continua y consistente.</p>
+      <p>Soy <span> Desarrollador Front End | Diseñador Creativo</span>, peruano de nacimiento, y presento mi formación profesional al desarrollo de <span>páginas web, aplicaciones de escritorio y portafolios profesionales</span>. Mi pasión por brindar buenas y efectivas soluciones la demuestro en la ejecución de mi ejercicio profesional, en el cual siempre busco entregar resultados, expandiendo mis conocimientos de manera continua y consistente. Además, he ampliado mi campo de acción al área de <span>diseño gráfico</span>, creando soluciones visuales que complementan perfectamente los proyectos web y aplicaciones. Esto incluye el diseño de <span>logotipos</span>, y <span>material publicitario</span>, con el objetivo de ofrecer un servicio integral que no solo sea funcional, sino también visualmente atractivo, mejorando la experiencia de los usuarios y la identidad de las marcas.</p>
     </div>
 
   </section>
@@ -200,6 +195,12 @@
         </p>
       </div>
 
+      <div class="box">
+        <img src="/imagesrh/DS.png" alt="">
+        <h3>Diseño Gráfico</h3>
+        <p>Transformamos ideas en imágenes impactantes. Ofrecemos soluciones personalizadas para crear <span>logotipos, identidad corporativa, material publicitario, posts para redes sociales y más</span>, con un enfoque único y creativo para destacar tu marca.
+        </p>
+      </div>
 
     </div>
 
