social media add

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206/" class="linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://github.com/ricardohoycode" class="linkedin" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://wa.me/51925417209?text=Hola%20Ricardo%Hoyos%20Deseo%20información%20por%20favor%quiero%una%web" class="linkedin" class="linkedin" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.instagram.com/ricardohoyoscode/" class="instagram" class="instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.tiktok.com/@rh.desarrolloydis" class="tiktok" class="tiktok" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="https://web.facebook.com/Ricardohoyoscode" class="facebook" class="facebook" target="_blank"><i class="fab fa-facebook"></i></a>
 
 
       </div>
