--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
         <a href="#home" class="activo">Inicio</a>
         <a href="#about">Sobre Mí</a>
         <a href="#facility">Servicios</a>
-        <a href="#projects">Aplicaciones y Webs</a>
+        <a href="#projects">Proyectos</a>
         <a href="#reviews">Recomendaciones</a>
         <a href="#contact">Contáctame</a>
-        <!--<button href="#" class="btn">Modo Oscuro</button>-->
+        <!-- <button href="#" class="btn-dark">Modo Oscuro</button>
+        <button class="scrollcolor-top-btn "></button>-->
       </nav>
 
       <div id="menuBar" class="fas fa-bars"></div>
@@ -56,9 +57,9 @@
       <div class="content">
         <h3>¡Hola!</h3>
         <h3><span>Soy</span> Ricardo Hoyos</h3>
-        <h2><span>Desarrollador Web FullStack  <br> <p> con Especialización en <span> Front-End </span> </p> </h2>  </span> 
+        <h2><span>Desarrollador Web & Diseño Creativo <br> <p> con Especialización en <span> Diseño Gráfico </span> </p> </h2>  </span> 
          <p>¡Contáctame y
-          conversemos sobre mi perfil!</p>
+          conversemos sobre tu emprendimiento!</p>
         <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206/" class="linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://github.com/ricardohoycode" class="linkedin" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://wa.me/51925417209?text=Hola%20Ricardo%Hoyos%20Deseo%20información%20por%20favor%quiero%una%web" class="linkedin" class="linkedin" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -85,7 +86,7 @@
 
     <div class="content">
       <h3>Bienvenidos a mi mundo <span>!</span></h3>
-      <p>Soy <span> Desarrollador Front End | Diseñador Creativo</span>, peruano de nacimiento, y presento mi formación profesional al desarrollo de <span>páginas web, aplicaciones de escritorio y portafolios profesionales</span>. Mi pasión por brindar buenas y efectivas soluciones la demuestro en la ejecución de mi ejercicio profesional, en el cual siempre busco entregar resultados, expandiendo mis conocimientos de manera continua y consistente. Además, he ampliado mi campo de acción al área de <span>diseño gráfico</span>, creando soluciones visuales que complementan perfectamente los proyectos web y aplicaciones. Esto incluye el diseño de <span>logotipos</span>, y <span>material publicitario</span>, con el objetivo de ofrecer un servicio integral que no solo sea funcional, sino también visualmente atractivo, mejorando la experiencia de los usuarios y la identidad de las marcas.</p>
+      <p>Soy <span> Desarrollador Front End | Diseñador Creativo</span>, peruano de nacimiento, y presento mi formación profesional al desarrollo de <span>páginas web, aplicaciones de escritorio y diseños profesionales y destacables</span>. <br> Mi pasión por brindar buenas y efectivas soluciones la demuestro en la ejecución de mi ejercicio profesional, en el cual siempre busco entregar resultados, expandiendo mis conocimientos de manera continua y consistente. Además, he ampliado mi campo de acción al área de <span>diseño gráfico</span>, creando soluciones visuales que complementan perfectamente los proyectos web y aplicaciones. Esto incluye el diseño de <span>logotipos</span>, y <span>material publicitario</span>, con el objetivo de ofrecer un servicio integral que no solo sea funcional, sino también visualmente atractivo, mejorando la experiencia de los usuarios y la identidad de las marcas.</p>
     </div>
 
   </section>
@@ -104,35 +105,51 @@
     <div class="box-container">
 
       <div class="box">
-        <img src="/imagesrh/website.jpg" alt="">
-        <h3>Maquetación y Creación web de Cero</h3>
-        <p>Desarrollo sitios web personalizados desde cero. Mi experiencia en diseño y desarrollo garantiza
-          <span>sitios
-            únicos y funcionales</span> que impulsarán tu presencia en línea y tu éxito.
-        </p>
+        <img src="/imagesrh/web3.png" alt="">
+        <h3>Creación de sitios web de cero
+        <p>Diseño totalmente personalizados, <span> adaptados a tu marca</span>, con un enfoque en la experiencia de usuario, funcionalidad y estética. Creamos tu <span>presencia en línea</span> desde la base.</p>
       </div>
 
       <div class="box">
-        <img src="imagesrh/laptop-vector.png" alt="">
-        <h3>Creación de Portfolios profesionales</h3>
-        <p>Portafolios impresionantes que resaltan tu trabajo. Nuestro <span>diseño personalizado y enfoque
-            creativo</span>
-          te ayudarán a destacar entre la competencia y cautivar a tu audiencia. ¡Potencia tu carrera hoy mismo!.</p>
+        <img src="imagesrh/4.png" alt="">
+        <h3>Creación digital de logotipos</h3>
+        <p>Desarrollo de <span>logotipos únicos</span> y memorables que reflejan la <span>identidad y visión de tu marca</span>, combinando creatividad y profesionalismo para destacar en tu sector.</p>
       </div>
 
       <div class="box">
-        <img src="imagesrh/3.jpg" alt="">
-        <h3>Desarrollo web para ventas</h3>
-        <p>Impulso tus ventas en línea. Nuestros servicios de diseño web optimizado para ventas <span>aumentan la
-            conversión y mejoran la experiencia del cliente</span> , impulsando el crecimiento de tu negocio.
-        </p>
+        <img src="imagesrh/2.png" alt="">
+        <h3>Tarjetas de presentación digitales</h3>
+        <p>Diseñamos <span>tarjetas de presentación digitales</span> modernas y elegantes, perfectas para compartir tu contacto de forma <span>rápida y profesional</span> en plataformas digitales.</p>
+      </div>
+      <div class="box">
+        <img src="/imagesrh/5.png" alt="">
+        <h3>Flyer y volantes para redes sociales</h3>
+        <p>Creación de <span>flyers y volantes</span> impactantes para <span>redes sociales</span>, diseñados para captar la atención de tu público objetivo con mensajes claros y visuales atractivos.</p>
       </div>
 
       <div class="box">
-        <img src="imagesrh/4.svg" alt="">
+        <img src="imagesrh/6.png" alt="">
+        <h3>Creación de correo corporativos y firmas corporativas</h3>
+        <p>Desarrollo de <span>correos electrónicos y firmas corporativas</span> personalizadas, optimizando la comunicación profesional con un <span>diseño moderno y funcional</span>.</p>
+      </div>
+
+      <div class="box">
+        <img src="imagesrh/7.png" alt="">
+        <h3>Perfiles y portadas para redes sociales</h3>
+        <p>Diseño creativo de <span>perfiles y portadas</span> para redes sociales que reflejan tu estilo y mejoran la visibilidad de tu marca en plataformas como <span>Facebook, Instagram, y LinkedIn</span>.</p>
+      </div>
+
+      <div class="box">
+        <img src="imagesrh/9.png" alt="">
         <h3>OnePage - landingPage</h3><br>
         <p>Cautiva a tu audiencia con páginas únicas y efectivas. Diseñamos one pages y landing pages de alto impacto
           que <span>convierten visitantes en clientes</span>. ¡Eleva tu presencia en línea hoy.!</p>
+      </div>
+
+      <div class="box">
+        <img src="imagesrh/13.png" alt="">
+        <h3>Invitación digitales de bodas y cumpleaños</h3>
+        <p>Diseño de <span>invitaciones digitales</span> personalizadas para bodas o cumpleaños, con un estilo único y elegante, listas para ser <span>compartidas fácilmente</span> por redes sociales o Whatsapp.</p>
       </div>
 
     </div>
@@ -149,7 +166,7 @@
 
       <h3> Creamos tu Sitio Web</h3>
 
-      <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206/" class="btn" target="_blank">Ver más</a>
+      <a href="https://wa.me/51925417209?text=Hola%20Ricardo%Hoyos%20Deseo%20información%20por%20favor%quiero%una%web" class="btn" class="linkedin" target="_blank">¡Conversemos!</a>
     </form>
 
   </section>
@@ -169,39 +186,28 @@
     <div class="box-container">
 
       <div class="box">
-        <img src="/imagesrh/5.png" alt="">
+        <img src="/imagesrh/10.png" alt="">
         <h3>Manejo de Redes sociales</h3>
-        <p><span>Potencia tu presencia en línea</span> . Manejo tus redes sociales creando
-          contenido cautivador,
-          interactúan con tu audiencia y optimizan tu estrategia digital. ¡Maximiza tu impacto en las redes con
-          nosotros!.
+        <p>Gestión integral de <span>redes sociales</span>, creando contenido atractivo y administrando tu comunidad para mejorar la interacción y <span>aumentar tu presencia digital</span>.</p>
+      </div>
+
+      <div class="box">
+        <img src="imagesrh/11.png" alt="">
+        <h3>Edición de video - Video social media </h3>
+        <p>Edición profesional de <span>videos para redes sociales</span>, optimizando contenido visualmente atractivo que impulse el <span>alcance en plataformas</span> como Instagram, TikTok, y YouTube.
         </p>
       </div>
 
       <div class="box">
-        <img src="imagesrh/6.jpg" alt="">
-        <h3>Branding</h3>
-        <p>Elevo tu marca a nuevas alturas. Servicios de manejo de branding <span>moldean una identidad
-            sólida y
-            atractiva</span>. Desde el diseño de logotipos hasta la estrategia de marca, estoy aquí para impulsar tu
-          reconocimiento y reputación.
+        <img src="/imagesrh/12.png" alt="">
+        <h3>Menú y catálogos digitales</h3>
+        <p>Creación de <span>menús y catálogos digitales</span> interactivos que permiten a tus clientes explorar tus <span>productos o servicios</span> de manera atractiva y fácil de navegar.
         </p>
       </div>
-
       <div class="box">
-        <img src="imagesrh/7.jpg" alt="">
-        <h3>Posicionamiento SEO</h3>
-        <p>Destaca en los motores de búsqueda con nuestro servicio de posicionamiento SEO. Optimizamos tu sitio web,
-          contenido y estrategia para <span>alcanzar las primeras posiciones</span>. Aumenta tu visibilidad en línea y
-          atrae más
-          clientes potenciales.
-        </p>
-      </div>
-
-      <div class="box">
-        <img src="/imagesrh/DS.png" alt="">
-        <h3>Diseño Gráfico</h3>
-        <p>Transformamos ideas en imágenes impactantes. Ofrecemos soluciones personalizadas para crear <span>logotipos, identidad corporativa, material publicitario, posts para redes sociales y más</span>, con un enfoque único y creativo para destacar tu marca.
+        <img src="imagesrh/8.png" alt="">
+        <h3>Creación de imágenes con IA - Retoque digital</h3>
+        <p>Utilizamos inteligencia artificial para <span>crear y retocar imágenes</span>, logrando resultados espectaculares para tus proyectos visuales, mejorando la <span>calidad y el impacto visual</span>.
         </p>
       </div>
 
@@ -566,6 +572,10 @@
 
   </section>
 
+  <button class="ir-arriba">
+    <span class="material-icons">&#11014;</span>
+  </button>
+
   <!-- footer section ends -->
 <!-- Swiper JS -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -597,7 +607,6 @@
 
   <!-- custom js file link  -->
   <script src="/script.js"></script>
-
 
 
 </body>
