--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="box-container">
 
       <div class="box">
-        <img src="/imagesrh/web3.png" alt="">
+        <img src="/imagesrh/3.png" alt="">
         <h3>Creación de sitios web de cero
         <p>Diseño totalmente personalizados, <span> adaptados a tu marca</span>, con un enfoque en la experiencia de usuario, funcionalidad y estética. Creamos tu <span>presencia en línea</span> desde la base.</p>
       </div>
